# vera2pdf

./: .gitignore  README.md  pyproject.toml
files/: front_page.html.j2  programme_item.html.j2
files/css/: style.css  style_fp.css
tests/: test_main.py
vera2epub4pb/: cover.py  main.py  model.py  sample_fitz.py  sample_pdfkit.py
vera2pdf/: _run.sh  exceptions.py  jpg2pdf.py  main.py  model.py
