[tool.poetry]
name = "vera2pdf"
version = "0.1.0"
description = ""
authors = ["Aleš Daniel <ales.daniel@adpro.cz>"]
readme = "README.md"
packages = [{include = "vera2pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.1"
ebooklib = "^0.17.1"
pikepdf = "^6.2.1"
pymupdf = "^1.23.5"
loguru = "^0.6.0"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
unidecode = "^1.3.7"
pdfkit = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.pytest.ini_options]
pythonpath = [
    ".", "vera2pdf"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
